--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,31 @@
             <artifactId>org.semanticweb.hermit</artifactId>
             <version>1.3.8.500</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-distribution</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.owlapi</groupId>
+            <artifactId>owlapi-apibinding</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-owlapi</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-modularity</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.galigator.openllet</groupId>
+            <artifactId>openllet-explanation</artifactId>
+            <version>2.6.4</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.espertech/esper -->
         <dependency>
             <groupId>com.espertech</groupId>
